Changes in the k for weekly.

--- a/Nativo/pages/activities/daily.html
+++ b/Nativo/pages/activities/daily.html
@@ -86,7 +86,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="../activities/weehly.html" class="nav-link">
+                  <a href="../activities/weekly.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Weekly activities</p>
                   </a>
