Implementing Results in index, simple y data.html

--- a/Nativo/pages/activities/weekly.html
+++ b/Nativo/pages/activities/weekly.html
@@ -58,7 +58,7 @@
             <img src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
-            <a href="#" class="d-block">Samir millan</a>
+            <a href="#" class="d-block">Samir Millán</a>
           </div>
         </div>
 
@@ -145,12 +145,12 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1 class="m-0 text-dark">Weehly</h1>
+              <h1 class="m-0 text-dark">Weekly</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-                <li class="breadcrumb-item active">Weehly</li>
+                <li class="breadcrumb-item active">Weekly</li>
               </ol>
             </div><!-- /.col -->
           </div><!-- /.row -->
