Still fixing and cleaning files. Functionality 100% in the pages daily, results, home and weekly.

--- a/Nativo/pages/contact/contact.html
+++ b/Nativo/pages/contact/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -158,64 +159,66 @@
 
       <!-- Main content -->
       <section class="content">
-    <!-- Contact Section -->
-    <div class="pb--60 pb-md--70">
-      <div class="container">
-          <div class="card-group berlin-card-group">
+        <!-- Contact Section -->
+        <div class="pb--60 pb-md--70">
+          <div class="container">
+            <div class="card-group berlin-card-group">
               <div class="card contact-card-1">
-                  <div class="card-body">
+                <div class="card-body">
                   <span class="quote-icon">”</span>
                   <p class="card-text">“With Nativo you can achieve your goals!”</p>
-              </div>
-                  <div class="card-footer">
-                      <div class="client-card">
-                          <div class="image">
-                              <img src="../../dist/img/Diego_Quijano.jpg" alt="">
-                          </div>
-                          <div class="content">
-                              <h5 class="title">Diego Felipe Quijano Zúñiga</h5>
-                              <span>Backend Engineer </span>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-              <div class="card contact-card-1">
-                  <div class="card-body">
-                  <span class="quote-icon">”</span>
-                  <p class="card-text">“Simply the best. Better than all the rest. I’d recommend this product to beginners and advanced users.”</p>
-              </div>
-              <div class="card-footer">
+                </div>
+                <div class="card-footer">
                   <div class="client-card">
-                      <div class="image">
-                          <img src="../../dist/img/Mauricio Drada.jpg" alt="">
-                      </div>
-                      <div class="content">
-                          <h5 class="title">Mauricio Drada Dávila</h5>
-                          <span>Frontend Engineer</span>
-                      </div>
+                    <div class="image">
+                      <img src="../../dist/img/Diego_Quijano.jpg" alt="">
+                    </div>
+                    <div class="content">
+                      <h5 class="title">Diego Felipe Quijano Zúñiga</h5>
+                      <span>Backend Engineer </span>
+                    </div>
                   </div>
-              </div>
+                </div>
               </div>
               <div class="card contact-card-1">
-                  <div class="card-body">
-                      <span class="quote-icon">”</span>
-                      <p class="card-text">“This is a top quality product. No need to think twice before purchasing, you simply could not go wrong”</p>
+                <div class="card-body">
+                  <span class="quote-icon">”</span>
+                  <p class="card-text">“Simply the best. Better than all the rest. I’d recommend this product to
+                    beginners and advanced users.”</p>
+                </div>
+                <div class="card-footer">
+                  <div class="client-card">
+                    <div class="image">
+                      <img src="../../dist/img/Mauricio Drada.jpg" alt="">
+                    </div>
+                    <div class="content">
+                      <h5 class="title">Mauricio Drada Dávila</h5>
+                      <span>Frontend Engineer</span>
+                    </div>
                   </div>
-                  <div class="card-footer">
-                          <div class="client-card">
-                              <div class="image">
-                                  <img src="../../dist/img/Samir Millán.jpeg" alt="">
-                              </div>
-                              <div class="content">
-                                  <h5 class="title">Samir Millán Orozco</h5>
-                                  <span>Frontend / Devops Engineer</span>
-                              </div>
-                          </div>
-                  </div>
+                </div>
               </div>
+              <div class="card contact-card-1">
+                <div class="card-body">
+                  <span class="quote-icon">”</span>
+                  <p class="card-text">“This is a top quality product. No need to think twice before purchasing, you
+                    simply could not go wrong”</p>
+                </div>
+                <div class="card-footer">
+                  <div class="client-card">
+                    <div class="image">
+                      <img src="../../dist/img/Samir Millán.jpeg" alt="">
+                    </div>
+                    <div class="content">
+                      <h5 class="title">Samir Millán Orozco</h5>
+                      <span>Frontend / Devops Engineer</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-      </div>
-  </div>
+        </div>
     </div>
     </section>
     <!-- /.content-wrapper -->
