--- a/Nativo/pages/activities/daily.html
+++ b/Nativo/pages/activities/daily.html
@@ -34,7 +34,7 @@
           <a href="../../index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="#" class="nav-link">Contact</a>
+          <a href="../contact/contact.html" class="nav-link">Contact</a>
         </li>
       </ul>
 
@@ -132,7 +132,6 @@
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-                <li class="breadcrumb-item active">Daily</li>
               </ol>
             </div><!-- /.col -->
           </div><!-- /.row -->
