--- a/Nativo/pages/activities/weekly.html
+++ b/Nativo/pages/activities/weekly.html
@@ -34,7 +34,7 @@
           <a href="../../index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="#" class="nav-link">Contact</a>
+          <a href="../contact/contact.html" class="nav-link">Contact</a>
         </li>
       </ul>
 
@@ -86,7 +86,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a href="../activities/weehly.html" class="nav-link active">
+                  <a href="../activities/weekly.html" class="nav-link active">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Weekly activities</p>
                   </a>
@@ -131,7 +131,6 @@
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
                 <li class="breadcrumb-item"><a href="../../index.html">Home</a></li>
-                <li class="breadcrumb-item active">Weekly</li>
               </ol>
             </div><!-- /.col -->
           </div><!-- /.row -->
@@ -219,29 +218,28 @@
                     </div>
                   </div>
                 </div>
-                <!-- /.card -->
               </div>
             </div>
           </div>
         </div>
     </div>
     </section>
-      <!-- /.content -->
+    <!-- /.content -->
+  </div>
+  <!-- /.content-wrapper -->
+  <footer class="main-footer">
+    <div class="float-right d-none d-sm-block">
+      <b>Version</b> 3.0.5
     </div>
-    <!-- /.content-wrapper -->
-    <footer class="main-footer">
-      <div class="float-right d-none d-sm-block">
-        <b>Version</b> 3.0.5
-      </div>
-      <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
-      reserved.
-    </footer>
+    <strong>Copyright &copy; 2014-2019 <a href="http://adminlte.io">AdminLTE.io</a>.</strong> All rights
+    reserved.
+  </footer>
 
-    <!-- Control Sidebar -->
-    <aside class="control-sidebar control-sidebar-dark">
-      <!-- Control sidebar content goes here -->
-    </aside>
-    <!-- /.control-sidebar -->
+  <!-- Control Sidebar -->
+  <aside class="control-sidebar control-sidebar-dark">
+    <!-- Control sidebar content goes here -->
+  </aside>
+  <!-- /.control-sidebar -->
   </div>
   <!-- ./wrapper -->
 
