--- a/Nativo/pages/activities/daily.html
+++ b/Nativo/pages/activities/daily.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Nativo | Daily</title>
-  <!-- Tell the browser to be responsive to screen width -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Font Awesome -->
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+
+  <title>Nativo | Daily Activities</title>
+
+  <!-- Font Awesome Icons -->
   <link rel="stylesheet" href="../../plugins/fontawesome-free/css/all.min.css">
-  <!-- Ionicons -->
-  <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-  <!-- SweetAlert2 -->
-  <link rel="stylesheet" href="../../plugins/sweetalert2/sweetalert2.min.css">
-  <!-- Toastr -->
-  <link rel="stylesheet" href="../../plugins/toastr/toastr.min.css">
   <!-- Theme style -->
   <link rel="stylesheet" href="../../dist/css/adminlte.min.css">
   <!-- Google Font: Source Sans Pro -->
@@ -23,6 +18,7 @@
 
 <body class="hold-transition sidebar-mini">
   <div class="wrapper">
+
     <!-- Navbar -->
     <nav class="main-header navbar navbar-expand navbar-white navbar-light">
       <!-- Left navbar links -->
@@ -34,10 +30,9 @@
           <a href="../../index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item d-none d-sm-inline-block">
-          <a href="../contact/contact.html" class="nav-link">Contact</a>
+          <a href="../../pages/contact/contact.html" class="nav-link">Contact</a>
         </li>
       </ul>
-
     </nav>
     <!-- /.navbar -->
 
@@ -45,32 +40,29 @@
     <aside class="main-sidebar sidebar-dark-primary elevation-4">
       <!-- Brand Logo -->
       <a href="../../index.html" class="brand-link">
-        <img src="../../dist/img/logo_nativo.png" alt="Nativo Logo" class="brand-image img-circle elevation-3"
+        <img src="../../dist/img/NativoLogo.png" alt="Nativo Logo" class="brand-image img-circle elevation-3"
           style="opacity: .8">
         <span class="brand-text font-weight-light">Nativo</span>
       </a>
 
       <!-- Sidebar -->
       <div class="sidebar">
-        <!-- Sidebar user (optional) -->
+        <!-- Sidebar user panel (optional) -->
         <div class="user-panel mt-3 pb-3 mb-3 d-flex">
           <div class="image">
-            <img src="../../dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+            <img src="../../dist/img/user-mauricio.jpeg" class="img-circle elevation-2" alt="User Image">
           </div>
           <div class="info">
-            <a href="#" class="d-block">Samir millan</a>
+            <a href="#" class="d-block">Mauricio Drada</a>
           </div>
         </div>
 
         <!-- Sidebar Menu -->
         <nav class="mt-2">
           <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
-            <!-- Add icons to the links using the .nav-icon class
-               with font-awesome or any other icon font library -->
-            <!-- menu-open -->
-            <li class="nav-header">MAIN NAVIGATION</li>
+            <!-- Add icons to links using .nav-icon class with font-awesome or other icon font library -->
             <li class="nav-item has-treeview menu-open">
-              <a href="#" class="nav-link active">
+              <a href="#" class="nav-link">
                 <i class="nav-icon fas fa-th"></i>
                 <p>
                   Activities
@@ -82,37 +74,25 @@
                 <li class="nav-item">
                   <a href="../activities/daily.html" class="nav-link active">
                     <i class="far fa-circle nav-icon"></i>
-                    <p>Daily activities</p>
+                    <p>Daily Activities</p>
                   </a>
                 </li>
                 <li class="nav-item">
                   <a href="../activities/weekly.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
-                    <p>Weekly activities</p>
+                    <p>Weekly Activities</p>
                   </a>
                 </li>
-
               </ul>
             </li>
-            <li class="nav-item has-treeview">
-              <a href="#" class="nav-link">
-                <i class="nav-icon fas fa-table"></i>
+            <li class="nav-item">
+              <a href="../results/activity_1.html" class="nav-link">
+                <i class="nav-icon fas fa-th"></i>
                 <p>
                   Results
-                  <i class="fas fa-angle-left right"></i>
                 </p>
               </a>
-              <ul class="nav nav-treeview">
-                <li class="nav-item">
-                  <a href="../../pages/results/activity_1.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Activity 1</p>
-                  </a>
-                </li>
-              </ul>
             </li>
-            </li>
-            <!-- Final Main navigation -->
           </ul>
         </nav>
         <!-- /.sidebar-menu -->
@@ -127,7 +107,7 @@
         <div class="container-fluid">
           <div class="row mb-2">
             <div class="col-sm-6">
-              <h1 class="m-0 text-dark">Daily</h1>
+              <h1 class="m-0 text-dark">Daily Activities</h1>
             </div><!-- /.col -->
             <div class="col-sm-6">
               <ol class="breadcrumb float-sm-right">
@@ -140,7 +120,7 @@
       <!-- /.content-header -->
 
       <!-- Main content -->
-      <section class="content">
+      <div class="content">
         <div class="container-fluid">
           <div class="row">
             <div class="col-12">
@@ -156,7 +136,7 @@
                     <li class="nav-item">
                       <a class="nav-link active" id="custom-tabs-one-home-tab" data-toggle="pill"
                         href="#custom-tabs-one-home" role="tab" aria-controls="custom-tabs-one-home"
-                        aria-selected="true">Activities 1</a>
+                        aria-selected="true">Daily Activities</a>
                     </li>
                   </ul>
                 </div>
@@ -168,8 +148,8 @@
                       <div class="card card-widget">
                         <div class="card-header">
                           <div class="user-block">
-                            <img class="img-circle" src="../../dist/img/user2-160x160.jpg" alt="User Image">
-                            <span class="username"><a href="#">Samir millan</a></span>
+                            <img class="img-circle" src="../../dist/img/user-mauricio.jpeg" alt="User Image">
+                            <span class="username"><a href="#">Mauricio Drada</a></span>
                             <span class="description">Name activities - 7:30 PM Today</span>
                           </div>
                           <!-- /.user-block -->
@@ -190,24 +170,17 @@
                           <!-- post text -->
                           <p>Far far away, behind the word mountains, far from the
                             countries Vokalia and Consonantia, there live the blind
-                            texts. Separated they live in Bookmarksgrove right at</p>
-
-                          <p>the coast of the Semantics, a large language ocean.
-                            A small river named Duden flows by their place and supplies
-                            it with the necessary regelialia. It is a paradisematic
-                            country, in which roasted parts of sentences fly into
-                            your mouth.</p>
+                            texts.
+                          </p>
 
                           <!-- Attachment -->
                           <div class="attachment-block clearfix">
-                            <img class="attachment-img" src="../../dist/img/user2-160x160.jpg" alt="Attachment Image">
+                            <img class="attachment-img" src="../../dist/img/user-mauricio.jpeg" alt="Attachment Image">
 
                             <div class="attachment-pushed">
-                              <h4 class="attachment-heading"><a href="http://www.lipsum.com/">Lorem ipsum text
-                                  generator</a></h4>
+                              <h4 class="attachment-heading"><a href="http://www.lipsum.com/">Some Text Here:</a></h4>
 
                               <div class="attachment-text">
-                                Description about the attachment can be placed here.
                                 Lorem Ipsum is simply dummy text of the printing and typesetting industry... <a
                                   href="#">more</a>
                               </div>
@@ -227,11 +200,11 @@
                         <div class="card-footer card-comments">
                           <div class="card-comment">
                             <!-- User image -->
-                            <img class="img-circle img-sm" src="../../dist/img/user2-160x160.jpg" alt="User Image">
+                            <img class="img-circle img-sm" src="../../dist/img/user-mauricio.jpeg" alt="User Image">
 
                             <div class="comment-text">
                               <span class="username">
-                                Samir millan
+                                Mauricio Drada
                                 <span class="text-muted float-right">8:03 PM Today</span>
                               </span><!-- /.username -->
                               It is a long established fact that a reader will be distracted
@@ -242,12 +215,12 @@
                           <!-- /.card-comment -->
                           <div class="card-comment">
                             <!-- User image -->
-                            <img class="img-circle img-sm" src="../../dist/img/user2-160x160.jpg" alt="User Image">
+                            <img class="img-circle img-sm" src="../../dist/img/user-mauricio.jpeg" alt="User Image">
 
                             <div class="comment-text">
                               <span class="username">
-                                Samir millan
-                                <span class="text-muted float-right">8:03 PM Today</span>
+                                Mauricio Drada
+                                <span class="text-muted float-right">9:15 PM Today</span>
                               </span><!-- /.username -->
                               The point of using Lorem Ipsum is that it hrs a morer-less
                               normal distribution of letters, as opposed to using
@@ -260,8 +233,7 @@
                         <!-- /.card-footer -->
                         <div class="card-footer">
                           <form action="#" method="post">
-                            <img class="img-fluid img-circle img-sm" src="../../dist/img/user2-160x160.jpg"
-                              alt="Alt Text">
+                            <img class="img-fluid img-circle img-sm" src="../../dist/img/user-mauricio.jpeg" alt="Alt Text">
                             <!-- .img-push is used to add margin to elements next to floating images -->
                             <div class="img-push">
                               <input type="text" class="form-control form-control-sm"
@@ -279,8 +251,8 @@
                       <div class="card card-widget">
                         <div class="card-header">
                           <div class="user-block">
-                            <img class="img-circle" src="../../dist/img/user2-160x160.jpg" alt="User Image">
-                            <span class="username"><a href="#">Samir millan</a></span>
+                            <img class="img-circle" src="../../dist/img/user-mauricio.jpeg" alt="User Image">
+                            <span class="username"><a href="#">Mauricio Drada</a></span>
                             <span class="description">Name activities - 7:30 PM Today</span>
                           </div>
                           <!-- /.user-block -->
@@ -299,28 +271,21 @@
                         <!-- /.card-header -->
                         <div class="card-body">
                           <!-- post text -->
-                          <p>Far far away, behind the word mountains, far from the
-                            countries Vokalia and Consonantia, there live the blind
-                            texts. Separated they live in Bookmarksgrove right at</p>
-
-                          <p>the coast of the Semantics, a large language ocean.
-                            A small river named Duden flows by their place and supplies
+                          <p>A small river named Duden flows by their place and supplies
                             it with the necessary regelialia. It is a paradisematic
                             country, in which roasted parts of sentences fly into
                             your mouth.</p>
 
                           <!-- Attachment -->
                           <div class="attachment-block clearfix">
-                            <img class="attachment-img" src="../../dist/img/user2-160x160.jpg" alt="Attachment Image">
+                            <img class="attachment-img" src="../../dist/img/user-mauricio.jpeg" alt="Attachment Image">
 
                             <div class="attachment-pushed">
-                              <h4 class="attachment-heading"><a href="http://www.lipsum.com/">Lorem ipsum text
-                                  generator</a></h4>
+                              <h4 class="attachment-heading"><a href="http://www.lipsum.com/">More Text Here:</a></h4>
 
                               <div class="attachment-text">
                                 Description about the attachment can be placed here.
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry... <a
-                                  href="#">more</a>
+                                Lorem Ipsum is simply... <a href="#">more</a>
                               </div>
                               <!-- /.attachment-text -->
                             </div>
@@ -338,31 +303,30 @@
                         <div class="card-footer card-comments">
                           <div class="card-comment">
                             <!-- User image -->
-                            <img class="img-circle img-sm" src="../../dist/img/user2-160x160.jpg" alt="User Image">
+                            <img class="img-circle img-sm" src="../../dist/img/user-mauricio.jpeg" alt="User Image">
 
                             <div class="comment-text">
                               <span class="username">
-                                Samir millan
-                                <span class="text-muted float-right">8:03 PM Today</span>
+                                Mauricio Drada
+                                <span class="text-muted float-right">9:55 PM Today</span>
                               </span><!-- /.username -->
                               It is a long established fact that a reader will be distracted
-                              by the readable content of a page when looking at its layout.
+                              by the readable content.
                             </div>
                             <!-- /.comment-text -->
                           </div>
                           <!-- /.card-comment -->
                           <div class="card-comment">
                             <!-- User image -->
-                            <img class="img-circle img-sm" src="../../dist/img/user2-160x160.jpg" alt="User Image">
+                            <img class="img-circle img-sm" src="../../dist/img/user-mauricio.jpeg" alt="User Image">
 
                             <div class="comment-text">
                               <span class="username">
-                                Samir millan
-                                <span class="text-muted float-right">8:03 PM Today</span>
+                                Mauricio Drada
+                                <span class="text-muted float-right">8:36 PM Today</span>
                               </span><!-- /.username -->
                               The point of using Lorem Ipsum is that it hrs a morer-less
-                              normal distribution of letters, as opposed to using
-                              'Content here, content here', making it look like readable English.
+                              normal distribution of letters.
                             </div>
                             <!-- /.comment-text -->
                           </div>
@@ -371,8 +335,7 @@
                         <!-- /.card-footer -->
                         <div class="card-footer">
                           <form action="#" method="post">
-                            <img class="img-fluid img-circle img-sm" src="../../dist/img/user2-160x160.jpg"
-                              alt="Alt Text">
+                            <img class="img-fluid img-circle img-sm" src="../../dist/img/user-mauricio.jpeg" alt="Alt Text">
                             <!-- .img-push is used to add margin to elements next to floating images -->
                             <div class="img-push">
                               <input type="text" class="form-control form-control-sm"
@@ -388,31 +351,39 @@
                     <!-- /Box daily init ****************************************** -->
                   </div>
                 </div>
+                <!-- /.card -->
               </div>
-              <!-- /.card -->
             </div>
           </div>
-        </div>
+        </div><!-- /.container-fluid -->
+      </div>
+      <!-- /.content -->
     </div>
-  </div>
-  </section>
-  <!-- /.content -->
-  </div>
-  <!-- /.content-wrapper -->
-  <footer class="main-footer">
-    <div class="float-right d-none d-sm-block">
-      <b>Version </b>1.0 
-    </div>
-    <strong> &copy;2020 <a href="../../index.html">Nativo </a></strong>
-  </footer>
+    <!-- /.content-wrapper -->
 
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
+    <!-- Control Sidebar -->
+    <aside class="control-sidebar control-sidebar-dark">
+      <!-- Control sidebar content goes here -->
+      <div class="p-3">
+        <h5>Title</h5>
+        <p>Sidebar content</p>
+      </div>
+    </aside>
+    <!-- /.control-sidebar -->
+
+    <!-- Main Footer -->
+    <footer class="main-footer">
+      <!-- To the right -->
+      <div class="float-right d-none d-sm-inline">
+        Version 1.0.0
+      </div>
+      <!-- Default to the left -->
+      <strong> &copy; 2020 <a href="../../index.html">Nativo </a></strong>
+    </footer>
   </div>
   <!-- ./wrapper -->
+
+  <!-- REQUIRED SCRIPTS -->
 
   <!-- jQuery -->
   <script src="../../plugins/jquery/jquery.min.js"></script>
@@ -420,8 +391,6 @@
   <script src="../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
   <!-- AdminLTE App -->
   <script src="../../dist/js/adminlte.min.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="../../dist/js/demo.js"></script>
 </body>
 
 </html>
